--- a/client/index.html
+++ b/client/index.html
@@ -173,9 +173,9 @@
                             <!-- <img class="projects__img projects__img-media" src="img/form.jpg" alt=""> -->
                             <div class="projects__content-media">
                                 <div class="projects__title-media">
-                                    React JavaScript React JavaScript React JavaScript React
+                                    A simple form using react and nodeJS.
                                 </div>
-                                <a class="btn__media" target="_blank" href="#">
+                                <a class="btn__media" target="_blank" href="https://github.com/alina-malina-op/React-form/tree/main/form_REACT">
                                     <span>View GitHub</span>
                                 </a>
                             </div>
